0.108.3/docs/generated-docs/gc-help-delete.md
---
search:
  exclude: true
---
<!--start-->

```
Usage: nessie-gc.jar delete [-hV] [--time-zone=<zoneId>] ([--inmemory] | [[--jdbc] --jdbc-url=<url>
                            [--jdbc-properties[=<String=String>[,<String=String>...]...]]...
                            [--jdbc-user=<user>] [--jdbc-password=<password>] [--jdbc-fetch-size
                            [=<fetchSize>]] [--jdbc-pool-max-size=<poolMaxSize>]
                            [--jdbc-schema=<schemaCreateStrategy>]]) (-l=<liveSetId> |
                            -L=<liveSetIdFile>)
Delete a live-set, must not be used with the in-memory contents-storage.
  -h, --help                 Show this help message and exit.
      --inmemory             Flag whether to use the in-memory contents storage. Prefer a JDBC
                               storage.
      --inmemory             Flag whether to use the in-memory contents storage. Prefer a JDBC
                               storage.
      --jdbc                 Flag whether to use the JDBC contents storage.
      --jdbc                 Flag whether to use the JDBC contents storage.
      --jdbc-fetch-size[=<fetchSize>]
                             JDBC fetch size, defaults to 100.
      --jdbc-fetch-size[=<fetchSize>]
                             JDBC fetch size, defaults to 100.
      --jdbc-password=<password>
                             JDBC password used to authenticate the database access.
      --jdbc-password=<password>
                             JDBC password used to authenticate the database access.
      --jdbc-pool-max-size=<poolMaxSize>
                             Maximum JDBC connection pool size, defaults to 5. The sweep/expire
                               phase holds one streaming connection plus one per
                               --expiry-parallelism worker, so set this to at least
                               --expiry-parallelism + 1 to avoid connection-acquisition timeouts.
      --jdbc-pool-max-size=<poolMaxSize>
                             Maximum JDBC connection pool size, defaults to 5. The sweep/expire
                               phase holds one streaming connection plus one per
                               --expiry-parallelism worker, so set this to at least
                               --expiry-parallelism + 1 to avoid connection-acquisition timeouts.
      --jdbc-properties[=<String=String>[,<String=String>...]...]
                             JDBC parameters.
      --jdbc-properties[=<String=String>[,<String=String>...]...]
                             JDBC parameters.
      --jdbc-schema=<schemaCreateStrategy>
                             How to create the database schema. Possible values: CREATE,
                               DROP_AND_CREATE, CREATE_IF_NOT_EXISTS.
      --jdbc-schema=<schemaCreateStrategy>
                             How to create the database schema. Possible values: CREATE,
                               DROP_AND_CREATE, CREATE_IF_NOT_EXISTS.
      --jdbc-url=<url>       JDBC URL of the database to connect to.
      --jdbc-url=<url>       JDBC URL of the database to connect to.
      --jdbc-user=<user>     JDBC user name used to authenticate the database access.
      --jdbc-user=<user>     JDBC user name used to authenticate the database access.
  -l, --live-set-id=<liveSetId>
                             ID of the live content set.
  -L, --read-live-set-id-from=<liveSetIdFile>
                             The file to read the live-set-id from.
      --time-zone=<zoneId>   Time zone ID used to show timestamps.
                             Defaults to system time zone.
  -V, --version              Print version information and exit.

```
